style: add CSS styles to complete css-exercises

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -46,48 +46,55 @@
       </div>
     </main>
 
-    <section>
-      <h2>We offer the following programs</h2>
+    <section class="programs-section">
       <div class="programs-card">
         <img src="./images/technical-img.jpg" alt="" />
-        <h4>Technical Skills</h4>
-        <ul>
-          <li>Lorem ipsum</li>
-          <li>Voluptatibus omnis</li>
-          <li>Quo ut voluptate</li>
-          <li>Mollitia iusto</li>
-        </ul>
+        <div class="text-tile-card">
+          <h4>Technical Skills</h4>
+          <ul>
+            <li>Lorem ipsum</li>
+            <li>Voluptatibus omnis</li>
+            <li>Quo ut voluptate</li>
+            <li>Mollitia iusto</li>
+          </ul>
+        </div>
       </div>
-      <div class="programs-card">
-        <img src="./images/data-img.jpg" alt="" />
-        <h4>Data Skills</h4>
 
-        <ul>
-          <li>At vero</li>
-          <li>Praesentium voluptatum</li>
-          <li>Repellendus veniam</li>
-        </ul>
-      </div>
       <div class="programs-card">
         <img src="./images/ai-img.jpg" alt="" />
-        <h4>AI Skills</h4>
-        <ul>
-          <li>Alias quisquam</li>
-          <li>Nam libero</li>
-          <li>Soluta nobis</li>
-        </ul>
+        <div class="text-tile-card">
+          <h4>AI Skills</h4>
+          <ul>
+            <li>Alias quisquam</li>
+            <li>Nam libero</li>
+            <li>Soluta nobis</li>
+          </ul>
+        </div>
       </div>
       <div class="programs-card">
         <img src="./images/bussiness-img.jpg" alt="" />
-        <h4>Business Skills</h4>
-        <ul>
-          <li>Omnis dolor</li>
-          <li>Itaque earum</li>
-          <li>Temporibus aute</li>
-        </ul>
+        <div class="text-tile-card">
+          <h4>Business Skills</h4>
+          <ul>
+            <li>Omnis dolor</li>
+            <li>Itaque earum</li>
+            <li>Temporibus aute</li>
+          </ul>
+        </div>
+      </div>
+      <div class="programs-card">
+        <img src="./images/data-img.jpg" alt="" />
+        <div class="text-tile-card">
+          <h4>Data Skills</h4>
+          <ul>
+            <li>At vero</li>
+            <li>Praesentium</li>
+            <li>Repellendus</li>
+          </ul>
+        </div>
       </div>
     </section>
-    <section>
+    <section class="quote-section">
       <blockquote cite="https://www.example.com/quote-source">
         "Education is the most powerful weapon which you can use to change the
         world."
@@ -95,7 +102,7 @@
       </blockquote>
     </section>
     <section class="cta-section">
-      <div class="text">
+      <div class="cta-text">
         <h4>Call to action! Its time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
       </div>
@@ -103,6 +110,10 @@
         <button>Sign up</button>
       </div>
     </section>
-    <footer>footer</footer>
+    <section class="footer-section">
+      <footer>
+        <p>&copy; 2024 DevNdamase. All rights reserved.</p>
+      </footer>
+    </section>
   </body>
 </html>
